# simpletext-clef2026

./: README.md
task1/: batch_haiku.py  batch_opus.py  batch_sonnet.py  ensemble_best.py  ensemble_strategies.py  eval_local.py  eval_scraped.py  pyproject.toml  scrape_cochrane.py  simplify.py  simplify_ensemble.py  simplify_local.py  simplify_ollama.py  simplify_pls_grounded.py  simplify_pls_task12.py  simplify_rag.py  simplify_regex.py  simplify_v2.py  simplify_v3.py  simplify_v4.py  simplify_v5.py  simplify_v6.py
task2/: build_portfolio.py  classify.py  classify_v2.py  classify_v3.py  classify_v4.py  feature_extraction.py  llm_grounding.py  llm_grounding_v2.py  main.py  modal_finetune_deberta.py  modal_finetune_shidey.py  modal_nli_inference.py  predict.py  predict_v6.py  predict_v7.py  pyproject.toml  train.py  train_v7.py
