[project]
name = "simpletext-task2"
version = "1.0.0"
description = "SimpleText Task 2: Identify and classify overgeneration in simplified text"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "tqdm>=4.65",
    "sentence-transformers>=3.0",
    "modal>=1.4.3",
]
